--- a/src/styles/ProjectDetails.css
+++ b/src/styles/ProjectDetails.css
@@ -1,8 +1,7 @@
 .project-details {
   padding: 20px;
-  background-color: #fafafa;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  background-color: #c5c2c2;
+  border-radius: 8px;
   max-width: 800px;
   margin: 20px auto;
 }
@@ -19,12 +18,16 @@
   align-items: center;
 }
 
+.header-right {
+  display: flex;
+  gap: 10px;
+}
+
 .project-logo {
   width: 100px;
   height: auto;
   object-fit: contain;
   border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   margin-right: 20px;
 }
 
@@ -34,31 +37,22 @@
   color: #333;
 }
 
-.delete-button {
-  background-color: #f44336; /* Color rojo para el botón de eliminar */
-  border-radius: 50%;
-  padding: 8px;
-}
-
-.delete-button:hover {
-  background-color: #d32f2f;
-}
-
 .project-description {
-  font-size: 1.1rem;
+  font-size: 1.2rem;
   line-height: 1.6;
-  color: #555;
-  margin-bottom: 30px;
+  color: #100f0f;
+  margin-bottom: 20px;
+  font-weight: 500;
 }
 
 .project-slider {
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
 .slider-image {
   width: 100%;
   height: 400px;
   object-fit: cover;
-  border-radius: 8px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 22px;
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
 }
